<resources>
    <string name="app_name">Elog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_oversigt">Oversigt</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_afrejse">Afrejse</string>
    <string name="menu_fangst">Fangst</string>
    <string name="menu_melding">Melding</string>
    <string name="menu_landing">Landing</string>
    <string name="menu_makkerskift">Makkerskift</string>
    <string name="menu_indstillinger">Indstillinger</string>
    <string name="menu_ankomst">Ankomst</string>
    <string name="ingen_fangst"> <b>Ingen</b> ombordværende fangst fra forrige fangstrejse</string>
   <string name="standardbesked_help">Forlægning til anden havn, vagttjeneste ved boreplatforme, transportrejser til fangstområder hvor sejlads tager mere end 24 timer etc.</string>
    <string-array name="longitude">
        <item>N</item>
        <item>S</item>
    </string-array>
    <string-array name="lattitude">
        <item>Ø</item>
        <item>V</item>
    </string-array>
    <string-array name="redskaber">
        <item>Trawl</item>
        <item>Torskenet</item>
        <item>Store Åleruser</item>
        <item>Små krabbetejner</item>
        <item>Net</item>
        <item>Hummertejner</item>
    </string-array>
    <string-array name="redskabsFejl">
        <item>Ingen fejl</item>
        <item>Ingen fangst</item>
        <item>Ødelagt/revnet net</item>
        <item>Redskab itu</item>
        <item>Masker beskadiget i fangstposen</item>
        <item>Tabte redskaber</item>
        <item>Andet</item>
    </string-array>
    <string-array name="standardbeskeder">
        <item>Dårligt vejr</item>
        <item>Inspektion foretaget</item>
        <item>Sejler mod fangstplads</item>
        <item>Sejler mod landingsplads</item>

    </string-array>
    <string-array name="fartojsforer">
        <item>Maria</item>
        <item>Alfred</item>
        <item>Erik</item>
        <item>Christina</item>
    </string-array>
    <string-array name="makkerliste">
        <item>HM96 - JANNI</item>
        <item>L549 – FRIDA AMALIE</item>
        <item>E100 – ELLA SOFIE</item>
        <item>HM64 – WALTER</item>
        <item>FN 156 – BITTEN</item>
    </string-array>
    <string-array name="natura2000">
        <item>Ja</item>
        <item>Nej</item>
    </string-array>
    <string-array name="enheder">
        <item>kg</item>
        <item>stk</item>
    </string-array>
</resources>