<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_oversigt"
            android:icon="@drawable/read"
            android:title="@string/menu_oversigt" />
        <item
            android:id="@+id/nav_afrejse"
            android:icon="@drawable/boat"
            android:title="@string/menu_afrejse"/>
        <item
            android:id="@+id/nav_fangst"
            android:icon="@drawable/salmon"
            android:title="@string/menu_fangst" />
        <item
            android:id="@+id/nav_melding"
            android:icon="@drawable/commercial"
            android:title="@string/menu_melding" />
        <item
            android:id="@+id/nav_landing"
            android:icon="@drawable/price"
            android:title="@string/menu_landing" />
        <item
            android:id="@+id/nav_ankomst"
            android:icon="@drawable/bouy"
            android:title="@string/menu_ankomst" />
        <item
            android:id="@+id/nav_makkerskift"
            android:icon="@drawable/group"
            android:title="@string/menu_makkerskift" />
        <item
            android:id="@+id/nav_indstillinger"
            android:icon="@drawable/services"
            android:title="@string/menu_indstillinger" />
    </group>
</menu>