<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_oversigt">

    <fragment
        android:id="@+id/nav_oversigt"
        android:name="com.example.elog.ui.oversigt.OversigtFragment"
        android:label="@string/menu_oversigt"
        tools:layout="@layout/fragment_oversigt" />

    <fragment
        android:id="@+id/nav_afrejse"
        android:name="com.example.elog.ui.afrejse.AfrejseFragment"
        android:label="@string/menu_afrejse"
        tools:layout="@layout/fragment_afrejse" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.elog.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.elog.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>